# cognitor

./: .dockerignore  .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  LICENSE_EE.md  README.md  docker-compose.worker-local.yml  docker-compose.yaml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: deploy-managed.yml  deploy.yml  python-publish.yml
apps/backend/: Dockerfile  package.json  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.json
apps/frontend/: Dockerfile  next.config.ts  package.json  tsconfig.tsbuildinfo
benchmarks/: README.md  docker-compose.benchmark.yml  requirements.txt  run_beir_e2e.py
benchmarks/results/: beir-e2e-compare-scifact-20260608-194152.json  beir-e2e-compare-scifact-20260608-194717.json  beir-e2e-scifact-20260608-192657.json  beir-e2e-scifact-20260608-192946.json
scripts/: README.md  compact.py  dev-down.ps1  dev-down.sh  dev-up.ps1  dev-up.sh  nuke_db.sh
scripts/dev/: README.md  dev_stack.sh  nuke_db.sh  seed_ecommerce.py
scripts/docker/: entrypoint.sh
scripts/maintenance/: README.md  rebuild_index.py
src/config/: defaults.py  settings.py
src/core/: collection.py  database.py  exceptions.py  models.py  state.py  types.py
src/embeddings/: __init__.py  base.py  exceptions.py  registry.py
src/execution/: async_tasks.py  batching.py  scheduler.py
src/indexes/: base.py  faiss_hnsw.py
src/search/: engine.py  extractive_qa.py  filters.py  rerank.py
src/server/: app.py  dependencies.py  responses.py
(+71 files in other folders)
