[project]
name = "cognitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.10.0",
    "fastapi[standard]>=0.136.1",
    "numpy>=2.4.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.0",
]

[tool.pyright]
stubPath = "stubs"
